# flutter-app

./: .flutter-plugins  .flutter-plugins-dependencies  .gitattributes  README.md  pubspec.yaml
android/: build.gradle
example/lib/: main.dart
integration_test/: plugin_integration_test.dart
ios/Classes/: MoproFlutterPlugin.swift  mopro.swift
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  mopro_flutter.dart  mopro_flutter_method_channel.dart
mopro_flutter_bindings/example/: README.md  pubspec.yaml
mopro_flutter_bindings/example/android/app/: build.gradle.kts
mopro_flutter_bindings/example/integration_test/: simple_test.dart
mopro_flutter_bindings/example/ios/Runner/: Info.plist
mopro_flutter_bindings/example/ios/Runner.xcodeproj/: project.pbxproj
mopro_flutter_bindings/example/lib/: main.dart
mopro_flutter_bindings/example/linux/: CMakeLists.txt
mopro_flutter_bindings/example/linux/flutter/: generated_plugins.cmake
mopro_flutter_bindings/example/linux/runner/: my_application.cc
mopro_flutter_bindings/example/windows/: CMakeLists.txt
mopro_flutter_bindings/lib/src/rust/: lib.dart  (+3 more)
mopro_flutter_bindings/rust/: Cargo.toml
mopro_flutter_bindings/rust/src/: frb_generated.rs
mopro_flutter_plugin/ios/Classes/: MoproFlutterPlugin.swift  mopro.swift
mopro_flutter_plugin/ios/MoproBindings.xcframework/: Info.plist
mopro_flutter_plugin/lib/: mopro_flutter.dart  mopro_flutter_method_channel.dart  mopro_flutter_platform_interface.dart  mopro_types.dart
mopro_flutter_plugin/test/: mopro_flutter_test.dart
your_flutter_app/: pubspec.yaml
(+16 files in other folders)
