[dependencies]
flutter_rust_bridge = "=2.11.1"

[dependencies.test-e2e]
path = "/Users/zhengyawen/Documents/GitHub/mopro-refactor/test-e2e"
version = "0.1.0"

[lib]
crate-type = [
    "cdylib",
    "staticlib",
]

[lints.rust.unexpected_cfgs]
check-cfg = ["cfg(frb_expand)"]
level = "warn"

[package]
edition = "2021"
name = "mopro_flutter_bindings"
version = "0.1.0"

[workspace]
